--- a/serialsignificance_scripts.tex
+++ b/serialsignificance_scripts.tex
@@ -1,3 +1,15 @@
+
+\begin{description}
+
+% \item[Geogebra] 
+
+% \link{  .ggb}{GeoGebra applet}
+
+% \item[R] 
+
+% \link{http://www.math.unl.edu/~sdunbar1/   .R}{R script for .}
+
+\begin{lstlisting}[language=R]
 library(markovchain)
 
 N <- 51; p <- 1/2; q <- 1 - p;
@@ -56,24 +68,36 @@ results[pL, nT] <- probEpsOutlier
 
 results
 
-## NAME: altEhernfestOutliers.R
-## USAGE: within R, at interactive prompt
-##        source("altEhernfestOutliers.R")
-## REQUIRED ARGUMENTS: none
-## OPTIONS: none
-## DESCRIPTION: An R script using the markovchain library to 
-##              simulate an alternative Ehrenfest urn model.            
-## DIAGNOSTICS: some diagnostics implicit from markovchain
-## CONFIGURATION AND ENVIRONMENT:  library(markovchain)
-## DEPENDENCIES:  library(markovchain)
-## INCOMPATIBILITIES: none known
-## PROVENANCE: created Steve Dunbar, based on documentation in
-## "The markovchain Package: A Package for Easily Handling Discrete
-##  Markov Chains in R" by G. Spedicato, et al.
-## BUGS AND LIMITATIONS: none known
-## FEATURES AND POTENTIAL IMPROVEMENTS:
-## 1.  Make a random start state.
-## AUTHOR:  Steve Dunbar
-## VERSION: Version 1.0 as of Tue Jan 22 07:43:53 CST 2019
-## KEYWORDS: Markov chain, stable distribution
+\end{lstlisting}  
 
+% \item[Octave]
+
+% \link{http://www.math.unl.edu/~sdunbar1/    .m}{Octave script for .}
+
+% \begin{lstlisting}[language=Octave]
+
+% \end{lstlisting}
+
+% \item[Perl] 
+
+% \link{http://www.math.unl.edu/~sdunbar1/    .pl}{Perl PDL script for .}
+
+% \begin{lstlisting}[language=Perl]
+
+% \end{lstlisting}
+
+% \item[SciPy] 
+
+% \link{http://www.math.unl.edu/~sdunbar1/    .py}{Scientific Python script for .}
+
+% \begin{lstlisting}[language=Python]
+
+% \end{lstlisting}
+
+\end{description}
+
+
+
+%%% Local Variables:
+%%% TeX-master: t
+%%% End:
